--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swr",
+  "name": "swr-fork",
   "version": "0.4.0",
   "description": "React Hooks library for remote data fetching",
   "main": "./dist/index.js",
