--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "homepage": "https://swr.vercel.app",
   "license": "MIT",
   "scripts": {
+    "prebuild": "rm -rf dist esm",
     "build": "npm run build:esm && npm run build:cjs",
     "build:cjs": "ncc build src/index.ts -o dist -m -e react",
     "build:esm": "tsc --module ES6 --outDir esm",
@@ -22,7 +23,8 @@
     "format": "prettier --write \"{src,test,examples}/**/*.{ts,tsx}\"",
     "lint": "eslint \"{src,test,examples}/**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"{src,test,examples}/**/*.{ts,tsx}\" --fix",
-    "test": "jest"
+    "test": "jest",
+    "prepublish": "yarn build"
   },
   "husky": {
     "hooks": {
